# pyjnius-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
pyjnius-wrapper/examples/admob/: pyproject.toml  usage.py
pyjnius-wrapper/examples/onesignal/: pyproject.toml  usage.py
pyjnius-wrapper/examples/onesignal/src/onesignal_pyjnius/: ADMMessageHandler.py  ADMMessageHandler.pyi  ADMMessageHandlerJob.py  ADMMessageHandlerJob.pyi  AlertDialogPrepromptForAndroidSettings.py  AlertDialogPrepromptForAndroidSettings.pyi  ApplicationInfoHelper.py  ApplicationInfoHelper.pyi  BackgroundRunnable.py  BackgroundRunnable.pyi  BootUpReceiver.py  BootUpReceiver.pyi  BuildConfig.py  BuildConfig.pyi  BundleCompat.py  BundleCompat.pyi  CallbackThreadManager.py  CallbackThreadManager.pyi  FCMBroadcastReceiver.py  FCMBroadcastReceiver.pyi  FCMIntentJobService.py  FCMIntentJobService.pyi  FCMIntentService.py  FCMIntentService.pyi  GenerateNotificationOpenIntent.py  GenerateNotificationOpenIntent.pyi  GenerateNotificationOpenIntentFromPushPayload.py  GenerateNotificationOpenIntentFromPushPayload.pyi  GetPackageInfoResult.py  GetPackageInfoResult.pyi  HmsMessageServiceOneSignal.py  HmsMessageServiceOneSignal.pyi  IntentGeneratorForAttachingToNotifications.py  IntentGeneratorForAttachingToNotifications.pyi  LocationPermissionController.py  LocationPermissionController.pyi  NavigateToAndroidSettingsForLocation.py  NavigateToAndroidSettingsForLocation.pyi  NavigateToAndroidSettingsForNotifications.py  NavigateToAndroidSettingsForNotifications.pyi  (+132 more)
pyjnius-wrapper/examples/onesignal/src/onesignal_pyjnius/influence/: OSInfluenceConstants.py  OSInfluenceConstants.pyi
(+9503 files in other folders)
