[build-system]
requires = ["pyjnius-builder"]
build-backend = "pyjnius_builder"

[project]
name = "admob-pyjnius"
version = "25.3.0"
description = "pyjnius wrappers for Google AdMob play-services-ads-api 25.3.0"
requires-python = ">=3.11"
dependencies = ["pyjnius"]

[tool.hatch.build.targets.wheel]
packages = ["src/admob_pyjnius"]
